add active email

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 SERVER_PORT = 7200
 DB_URI = db.json
+HOST = smtp.gmail.com
+POST = 587
+USER = yukipham0702@gmail.com
+PASS = ogwn sato wznz sukr
+KEY = yukiElectric
