--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/socket.io": "^3.0.2",
     "config": "^3.3.11",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.4"
   }
