--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
-
-# System files
-.DS_Store
-Thumbs.db
+node_modules
+db.json
+sentence.txt
