update domain client

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POST = 587
 USER = yukipham0702@gmail.com
 PASS = ogwn sato wznz sukr
 KEY = yukiElectric
-DOMAIN = http://localhost:4200
+DOMAIN = https://ai-project-dog-chat-closeai.github.io/DogChatClient
