--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "socket.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/bin/socket.js"
+    "start": "nodemon ./src/bin/socket.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "python-shell": "^5.0.0",
     "socket.io": "^4.7.4"
   }
 }
